--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "palette_tool",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@ttskch/select2-bootstrap4-theme": "^1.0.5"
+  }
 }
